[tool.poetry]
name = "schmetterling"
version = "1.1.0"
description = ""
authors = ["Magnus Bjuvensjö <bjuvensjo@gmail.com>"]
readme = "README.md"
packages = [{include = "schmetterling", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
jsonpickle = "^3.0.1"
more-itertools = "^9.1.0"
schedule = "^1.2.0"
vang = "^1.3.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.0"
pytest-cov = "^4.0.0"
ipython = "^8.12.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]